--- a/docs/include/after_body.html
+++ b/docs/include/after_body.html
@@ -1,5 +1,5 @@
     <div id="footer">
       <div class="container">
-        <p class="muted credit">Created by <a href="http://www.science.smith.edu/~bbaumer" target="_blank">Ben Baumer</a>.</p>
+        <p class="muted credit">Website maintained by <a href="http://www.science.smith.edu/~bbaumer" target="_blank">Ben Baumer</a>.</p>
       </div>
     </div>
